member reservation section, member finance section with topup list, start of earnings and purchases list, remove paid status, working member_rental section,

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -24,6 +24,7 @@ template(name='nav')
                     unless logging_out
                         if is_member
                             a.ui.item(href="/member/#{currentUser.username}/info" class="{{isActiveRoute regex='member_profile'}}")
+                                .ui.small.basic.green.label #{currentUser.credit}
                                 if currentUser.profile_image_id
                                     img.ui.avatar.image(src="{{c.url currentUser.profile_image_id width=100 height=100 gravity='face' crop='fill'}}")
                                 else
@@ -36,8 +37,6 @@ template(name='nav')
                                 else
                                     +i name='user' classes='ui mini inline image'
                                 .mobile.hidden #{currentUser.name}
-                                if is_member
-                                    |#{credits}
                     if logging_out
                         .ui.item
                             i.loading.circle.notch.icon
